--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -3,6 +3,8 @@
   --vt-c-white: #ffffff;
   --vt-c-white-soft: #f8f8f8;
 
+  --vt-c-gray: #cdcdcd;
+
   --vt-c-black: #181818;
   --vt-c-black-soft: #222222;
 
